--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,19 +14,25 @@ description: An application that help you to better manage your expenses
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  flutter_cupertino_localizations: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_launcher_icons: any
-  date_format: any
   scoped_model: any
   intl: any
+  pattern_formatter: any
+  flutter_cupertino_date_picker: ^1.0.12
+  sqflite: ^1.1.7+1
+  path: ^1.6.4
 
 dev_dependencies:
   flutter_test:
@@ -45,9 +51,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+  - assets/db_depense.db
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
