--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_cupertino_date_picker: ^1.0.12
   sqflite: ^1.1.7+1
   path: ^1.6.4
+  flutter_slidable: "^0.5.4"
 
 dev_dependencies:
   flutter_test:
