*new logo image *Pie chart *filter periode Home page *filter periode and date My transaction -be continued-

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="Gestion des dépenses"
+        android:label="Mes dépenses"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
