--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,17 @@ dependencies:
   sqflite: ^1.1.7+1
   path: ^1.6.4
   flutter_slidable: "^0.5.4"
+  charts_flutter: ^0.8.1
+  backdrop: ^0.1.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  image_path: "assets/logo.png"
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
