--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_slidable: "^0.5.4"
   charts_flutter: ^0.8.1
   backdrop: ^0.1.8
+  flutter_spinkit: ^4.0.0
 
 dev_dependencies:
   flutter_test:
