--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   assets:
   - assets/db_depense.db
   - assets/logo.png
+  - assets/calculator.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
